--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -23,17 +26,21 @@
         </activity>
 
         <activity android:name=".SignupActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:launchMode="singleTask"/>
         <activity android:name=".SigninActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:launchMode="singleTask"/>
         <activity android:name=".HomeActivity"
             android:exported="false"
             android:theme="@style/Theme.Material3.DayNight"
-            android:label="Home"/>
+            android:label="Home"
+            android:launchMode="singleTask"/>
         <activity android:name=".ProfileActivity"
             android:exported="false"
             android:theme="@style/Theme.Material3.DayNight"
             android:label="Profile"
+            android:launchMode="singleTask"
             />
     </application>
 
