--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,28 +14,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MedBot"
-        tools:targetApi="31">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31"
+        >
         <activity
             android:name=".SplashActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
 
         <activity android:name=".SignupActivity"
-            android:exported="false"
+            android:exported="true"
             android:launchMode="singleTask"/>
         <activity android:name=".SigninActivity"
             android:exported="false"
             android:launchMode="singleTask"/>
         <activity android:name=".HomeActivity"
-            android:exported="false"
+            android:exported="true"
             android:theme="@style/Theme.Material3.DayNight"
             android:label="Home"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask">
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
+
+                    <category android:name="android.intent.category.LAUNCHER" />
+                </intent-filter>
+        </activity>
         <activity android:name=".ProfileActivity"
             android:exported="false"
             android:theme="@style/Theme.Material3.DayNight"
