Added new activity called "FeedbackActivity.kt" and it's xml file "activity_feedback.xml" it's just frontend for feedback feature...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
             android:label="Profile"
             android:launchMode="singleTask"
             />
+        <activity android:name=".FeedbackActivity"
+            android:exported="false"
+            android:launchMode="singleTask"
+            />
     </application>
 
 </manifest>
