--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
 
     <application
@@ -52,6 +54,16 @@
             />
         <activity android:name=".FeedbackActivity"
             android:exported="false"
+            android:launchMode="singleTask"
+            />
+        <activity android:name=".ChatActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Material3.DayNight"
+            android:launchMode="singleTask"
+            tools:ignore="DuplicateActivity" />
+
+        <activity android:name=".SavedChatListActivity"
+            android:exported="true"
             android:launchMode="singleTask"
             />
     </application>
